--- a/shouye.html
+++ b/shouye.html
@@ -189,7 +189,7 @@
 				<img class="j" src="bigAssign/picture/img/1(1).jpg">
 				<img class="j" src="bigAssign/picture/img/2.jpg">
 				<img class="j" src="bigAssign/picture/img/3(1).png">
-				<img class="j" src="bigAssign/picture/img/qqq.png">
+				<a href="https://fym1.github.io/web-lky/xiangqing.html"><img class="j" src="bigAssign/picture/img/qqq.png"></a>
 			</div>
 		</div>
 		<div class="right6">
