--- a/shouye.html
+++ b/shouye.html
@@ -186,10 +186,10 @@
 				<li>&nbsp;6</li>
 			</ul>
 			<div class="bottomm">
-				<img class="j" src="bigAssign/picture/img/1(1).jpg">
-				<img class="j" src="bigAssign/picture/img/2.jpg">
-				<img class="j" src="bigAssign/picture/img/3(1).png">
-				<a href="https://fym1.github.io/web-lky/xiangqing.html"><img class="j" src="bigAssign/picture/img/qqq.png"></a>
+				<a href=""><img class="j" src="bigAssign/picture/img/1(1).jpg"></a>
+				<a href=""><img class="j" src="bigAssign/picture/img/2.jpg"></a>
+				<a href=""><img class="j" src="bigAssign/picture/img/3(1).png"></a>
+				<a href=""><img class="j" src="bigAssign/picture/img/qqq.png"></a>
 			</div>
 		</div>
 		<div class="right6">
@@ -246,7 +246,8 @@
 				<form class="form">
             		<input class="input" style="width:122px;height:23px;" type="text" placeholder="请输入手机号">
             		<br/>
-               		&nbsp;&nbsp;&nbsp;&nbsp;<select id="money" style="width:62px;height:17px;">
+               		&nbsp;&nbsp;&nbsp;&nbsp;
+               		<select id="money" style="width:62px;height:17px;">
             			<option value="10" >10</option>
             			<option value="30" selected>30</option>
             			<option value="50" >50</option>
@@ -519,6 +520,17 @@
         up1.onmouseover=function(){
         	this.style.cursor='pointer';
         }
+	</script>
+	<script>
+	//充值金额变化
+		var money=document.getElementById("money");
+		money.setAttribute("onchange","xixi1()")
+		function xixi1(){
+			var index=money.selectedIndex;
+			var money1=money.options[index].value;
+			var money2=document.getElementsByClassName("i")[1];
+			money2.innerHTML="&nbsp;¥"+money1;
+		}
 	</script>
 	<script>
 	//顶部悬浮
